<resources>
    <string name="app_name">PopularMovies</string>
    <string name="imdb_rating">IMDB Rating</string>
    <string name="popularity">Popularity</string>
    <string name="generes">Generes</string>
    <string name="production_houses">Production Houses</string>
    <string name="no_data_found">No data found</string>
    <string name="no_internet_connectivity_title">No internet connectivity</string>
    <string name="no_internet_connectivity_content">Please connect to internet and try again</string>
    <string name="losing_data_connectivity">Losing internet connection</string>
    <string name="universal_error_message">Something went wrong</string>
    <string name="dash">-</string>

    <string name="movie_item_cd">Movies poster images</string>
    <string name="movie_item_language_cd">Movies original language is </string>
    <string name="movie_item_released_cd">Movie was release on</string>
    <string name="movie_tagline_cd">Movies tagline</string>
    <string name="movie_budget_cd">Movies budget</string>
    <string name="movie_country_cd">Movies country</string>
    <string name="movie_production_house_cd">Movies production house</string>
</resources>